--- a/login-page/src/Components/Card/Card.css
+++ b/login-page/src/Components/Card/Card.css
@@ -1,6 +1,6 @@
 .card {
   width: 550px;
-  background-color: #000;
+  background-color: #7fce3a;
   height: 700px;
   border-radius: 1rem;
   padding: 2rem;
