--- a/login-page/src/Components/LoginForm/LoginForm.css
+++ b/login-page/src/Components/LoginForm/LoginForm.css
@@ -5,7 +5,7 @@
 }
 
 .subtitle {
-  color: rgb(218, 218, 218);
+  color: rgb(255, 251, 251);
   text-align: center;
   margin-bottom: 3rem;
 }
@@ -36,14 +36,14 @@
   font-size: 1rem;
   font-family: inherit;
   cursor: pointer;
-  background-color: #4e65f7;
+  background-color: #fda421;
   color: white;
   border: 2px solid transparent;
 }
 
 .login_button:hover {
-  border: 2px solid #4e65f7;
-  background-color: #000;
+  border: 2px solid #fda421;
+  background-color: rgb(66, 164, 67);
 }
 
 .link_container {
@@ -65,11 +65,12 @@
   justify-content: center;
   gap: 1.5rem;
 }
-
+/*
 .icon {
   color: white;
   cursor: pointer;
 }
+*/
 
 .error_msg {
   color: red;
