--- a/login-page/src/Components/LoggedIn/LoggedIn.css
+++ b/login-page/src/Components/LoggedIn/LoggedIn.css
@@ -14,12 +14,12 @@
   font-size: 1rem;
   font-family: inherit;
   cursor: pointer;
-  background-color: #000;
+  background-color: #fda421;
   color: white;
   border: 2px solid transparent;
 }
 
 .back_button:hover {
   border: 2px solid #000;
-  background-color: transparent;
+  background-color: #fda421;
 }
