--- a/login-page/src/Components/LoginForm/LoginForm.css
+++ b/login-page/src/Components/LoginForm/LoginForm.css
@@ -19,7 +19,7 @@
   width: 95%;
   margin: 1.5rem auto;
   padding: 1rem;
-  border-radius: 25px;
+  border-radius: 5px;
   font-size: 1rem;
   font-family: inherit;
   outline: 0;
@@ -31,21 +31,31 @@
   margin: 3rem auto 1rem auto;
   width: 55%;
   padding: 0.75rem 1rem;
-  border-radius: 25px;
-  outline: 0;
+  border-radius: 5px;
+  
   font-size: 1rem;
   font-family: inherit;
   cursor: pointer;
-  background-color: #fda421;  
-  color: white;
-  border: 2px solid transparent;
+  background: linear-gradient(90deg,
+  rgb(250, 250, 72) 0%,
+  rgb(173, 65, 205) 100%);
+  outline: none;
+  border: none;
+  color: #fff;
+  font-size: 1rem;
+ 
 }
-
+/*
 .login_button:hover {
-  border: 4px solid #fda421;
-  background-color: black;
+  cursor: pointer;
+  background: linear-gradient(
+    90deg,
+    rgb(239, 200, 195) 0%,
+    rgb(241, 106, 10) 100%
+  );
+  transition: all 0.4s ease-out;
 }
-
+*/
 .link_container {
   display: flex;
   justify-content: center;
