--- a/about-page/src/Components/LoginForm/LoginForm.css
+++ b/about-page/src/Components/LoginForm/LoginForm.css
@@ -1,7 +1,6 @@
 .title {
-  color: white;
-  text-align: center;
-  margin-bottom: 1rem;
+  
+ background-image: "/Users/kelsie13/Documents/GitHub/login-page/about-page/public/SIGN-IN-12-8-2023.png";
 }
 
 .subtitle {
