--- a/about-page/src/Components/LoginForm/LoginForm.css
+++ b/about-page/src/Components/LoginForm/LoginForm.css
@@ -1,6 +1,7 @@
 .title {
   
  background-image: "/Users/kelsie13/Documents/GitHub/login-page/about-page/public/SIGN-IN-12-8-2023.png";
+ background-size: cover;
 }
 
 .subtitle {
@@ -20,7 +21,7 @@
   padding: 1rem;
   border-radius: 5px;
   font-size: 1rem;
-  font-family: inherit;
+  font-family: 'PT Sans', sans-serif;
   outline: 0;
   border: 0;
 }
@@ -33,7 +34,7 @@
   border-radius: 5px;
   
   font-size: 1rem;
-  font-family: inherit;
+  font-family: 'PT Sans', sans-serif;
   cursor: pointer;
   background: linear-gradient(90deg,
   rgb(250, 250, 72) 0%,
@@ -57,12 +58,6 @@
   text-decoration: underline;
   margin-bottom: 5rem;
   cursor: pointer;
-}
-
-.icons {
-  display: flex;
-  justify-content: center;
-  gap: 1.5rem;
 }
 
 
