--- a/about-page/src/Components/LoginForm/LoginForm.css
+++ b/about-page/src/Components/LoginForm/LoginForm.css
@@ -18,7 +18,7 @@
   width: 95%;
   margin: 1.5rem auto;
   padding: 1rem;
-  border-radius: 5px;
+  border-radius: 7px;
   font-size: 1rem;
   font-family: 'PT Sans', sans-serif;
   outline: 0;
@@ -30,10 +30,11 @@
   margin: 3rem auto 1rem auto;
   width: 55%;
   padding: 0.75rem 1rem;
-  border-radius: 5px;
+  border-radius: 7px;
   
   font-size: 1rem;
   font-family: 'PT Sans', sans-serif;
+  font-weight: bold;
   cursor: pointer;
   background: linear-gradient(90deg,
   rgb(250, 250, 72) 0%,
